tests/fixtures/invalid/bool_div_list.py
# Cannot divide Bool and List[int]
x: float = True / [1, 2, 3]
